// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Component closes the first tab and opens any clicked tab 1`] = `
<div>
  <button
    key="0"
    onClick={[Function]}
  >
    Section 1
  </button>
  <button
    key="1"
    onClick={[Function]}
  >
    Section 2
  </button>
  <button
    key="2"
    onClick={[Function]}
  >
    Section 3
  </button>
  <div
    className="content"
  >
    This is the second section. It has many things to say about the advantages of being a number 2.
  </div>
</div>
`;

exports[`Accordion Component renders empty given no tabs 1`] = `<div />`;

exports[`Accordion Component renders the first tab by default 1`] = `
<div>
  <button
    key="0"
    onClick={[Function]}
  >
    Section 1
  </button>
  <button
    key="1"
    onClick={[Function]}
  >
    Section 2
  </button>
  <button
    key="2"
    onClick={[Function]}
  >
    Section 3
  </button>
  <div
    className="content"
  >
    This is the first section. It has a lot to say about being number 1.
  </div>
</div>
`;
